Update user queries

--- a/ExpAssets/Config/MotorMapping_user_queries.json
+++ b/ExpAssets/Config/MotorMapping_user_queries.json
@@ -9,7 +9,7 @@
         {
             "title": "name",
             "database_field": "userhash",
-            "query": "What is your full name, banner number or e-mail address?\nYour answer will be encrypted and cannot be read later.",
+            "query": "Please enter your B00 number (or another unique ID)\nYour answer will be encrypted and cannot be read later.",
             "accepted": null,
             "allow_null": false,
             "format": {
@@ -47,7 +47,7 @@
         {
             "title": "handedness",
             "database_field": "handedness",
-            "query": "Are you right-handed, left-handed or ambidextrous?\nAnswer with: (r)ight, (l)eft, or (a)mbidextrous",
+            "query": "Are you right-handed, left-handed, or ambidextrous?\nAnswer with: (r)ight, (l)eft, or (a)mbidextrous",
             "accepted": ["r", "l", "a"],
             "allow_null": false,
             "format": {
