Update to latest klibs

--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 pylint = "*"
 
 [packages]
-klibs = {file = "https://github.com/a-hurst/klibs/releases/download/0.7.6b1/klibs.tar.gz"}
+klibs = {git = "https://github.com/a-hurst/klibs.git", ref = "b18cd940ac4317c9ee72d30839e8311914d95e37"}
 pyusb = "*"
 libusb_package = "*"
 
